@@ -16,7 +16,7 @@
     </p>
     <pre>
 \documentclass{article}
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[active,displaymath,textmath]{preview}
 \pagestyle{empty}
 \begin{document}
@@ -35,7 +35,7 @@ __REPLACE_ME__ %this is where your LaTeX expression goes
     </p>
     <p>
     The file is written as UTF-8 (always) so please do not remove the
-    <tt>utf8x</tt> encoding.
+    <tt>utf8</tt> encoding.
     </p>
     <h1>Alternative templates</h1>
     <p>
@@ -46,7 +46,7 @@ __REPLACE_ME__ %this is where your LaTeX expression goes
     </p>
     <pre>
 \documentclass{article}
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[active,displaymath,textmath]{preview}
 \usepackage{amsmath,amssymb,amsopn}
 \usepackage{mathrsfs}
